--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -125,7 +125,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v3
         with:
-          node-version: 16.14.x
+          node-version: [10.x, 12.x, 14.x]
           cache: npm
           cache-dependency-path: "front-app/package-lock.json"
       - name: Install dependencies
