--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "exit 0"
+    "build": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
