--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [10.x, 12.x, 14.x]
+        node-version: [14.x]
         # The same array lives in test-windows.yml, so make any updates there too.
         test-group:
           [
@@ -73,7 +73,7 @@ jobs:
             try {
               const response = await github.repos.getBranch({
                 owner: 'github',
-                repo: 'docs-early-access',
+                repo: 'marceloalbam',
                 BRANCH_NAME,
               })
               console.log(`Using docs-early-access branch called '${BRANCH_NAME}'.`)
@@ -90,18 +90,18 @@ jobs:
         if: ${{ github.repository == 'github/docs-internal' }}
         uses: actions/checkout@v3
         with:
-          repository: github/docs-early-access
+          repository: github/marceloalbam
           token: ${{ secrets.DOCUBOT_REPO_PAT }}
-          path: docs-early-access
+          path: marceloalbam
           ref: ${{ steps.check-early-access.outputs.result }}
 
       - name: Merge docs-early-access repo's folders
         if: ${{ github.repository == 'github/docs-internal' }}
         run: |
-          mv docs-early-access/assets assets/images/early-access
-          mv docs-early-access/content content/early-access
-          mv docs-early-access/data data/early-access
-          rm -r docs-early-access
+          mv marceloalbam/assets assets/images/early-access
+          mv marceloalbam/content content/early-access
+          mv marceloalbam/data data/early-access
+          rm -r marceloalbam
 
       # This is necessary when LFS files where cloned but does nothing
       # if actions/checkout was run with `lfs:false`.
@@ -139,7 +139,7 @@ jobs:
           key: ${{ runner.os }}-nextjs-${{ hashFiles('package*.json') }}
 
       - name: Run build script
-        run: npm build
+        run: npm run-script build
 
       - name: Run tests
         env:
