--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -9,9 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 14.x
       - run: npm ci
       - run: npm test
 
@@ -23,9 +23,9 @@ jobs:
       contents: read
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 14.x
           registry-url: https://npm.pkg.github.com/
       - run: npm ci
       - run: npm publish
