--- a/package.json
+++ b/package.json
@@ -15,8 +15,5 @@
   "bugs": {
     "url": "https://github.com/marceloalbam/encaps/issues"
   },
-  "homepage": "https://github.com/marceloalbam/encaps#readme",
-  "publishConfig": {
-   "@marceloalbam:registry": "https://npm.pkg.github.com"
- }
+  "homepage": "https://github.com/marceloalbam/encaps#readme"
 }
