--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "webpack --config webpack.config.js"
   },
   "publishConfig": {
+    "access": "public",
     "@marceloalbam:registry": "https://npm.pkg.github.com"
   },
   "repository": {
