--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -25,8 +25,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v1
         with:
-          node-version: 12.x
-          registry-url: https://npm.pkg.github.com/
+          node-version: 14.x
+          registry-url: https://npm.pkg.github.com
       - run: npm ci
       - run: npm publish
         env:
