--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "publishConfig": {
     "access": "public",
-    "@marceloalbam/encaps:registry": "https://npm.pkg.github.com"
+    "registry": "https://npm.pkg.github.com"
   },
   "repository": {
     "type": "git",
