--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-@marceloalbam/encaps:registry=https://registry.npmjs.org
+@marceloalbam/encaps:registry=https://npm.pkg.github.com
 always-auth=true
