--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -26,8 +26,8 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 14.x
-          registry-url: https://npm.pkg.github.com
+          registry-url: https://npm.pkg.github.com/
       - run: npm ci
-      - run: npm publish @marceloalbam/encaps --tag
+      - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
