--- a/package.json
+++ b/package.json
@@ -8,15 +8,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://marceloalbam@github.com/marceloalbam/encaps.git"
+    "url": "https://github.com/marceloalbam/encaps.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/marceloalbam/encaps/issues"
   },
-  "homepage": "https://github.com/marceloalbam/encaps#readme",
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
-  }
+  "homepage": "https://github.com/marceloalbam/encaps#readme"
 }
