--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "scripts": {
     "build": "webpack --config webpack.config.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/marceloalbam/encaps.git"
-  },
+  "repository": "https://github.com/marceloalbam/encaps.git",
   "author": "",
   "license": "ISC",
   "bugs": {
