--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/marceloalbam/encaps/issues"
   },
-  "homepage": "https://github.com/marceloalbam/encaps#readme"
+  "homepage": "https://github.com/marceloalbam/encaps#readme",
+  "engines": {
+    "node": "0.10.20"
+  }
 }
