--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -9,9 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2.2.0
         with:
-          node-version: 14.x
+          node-version: 14.6
       - run: npm ci
       - run: npm test
 
@@ -23,9 +23,9 @@ jobs:
       contents: read
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2.2.0
         with:
-          node-version: 14.x
+          node-version: 14.6
           registry-url: https://npm.pkg.github.com/
       - run: npm ci
       - run: npm login --registry=https://npm.pkg.github.com --scope=@marceloalbam
